deployments/service/base/authsrv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authsrv
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
